--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Dragon Rampant Army Builder"
-      content="Web site to build armies for Dragon Rampant"
+      content="Web app to build armies for Dragon Rampant"
     />
+    <meta name="Description" content="Web app to build armies for Dragon Rampant. An Armybuilder for the tabletop strategy game Dragon Rampant.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
