--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       content="Web app to build armies for Dragon Rampant"
     />
     <meta name="Description" content="Web app to build armies for Dragon Rampant. An Armybuilder for the tabletop strategy game Dragon Rampant.">
-    <link rel="apple-touch-icon" href="/icon-192x192.png" />
-    <link rel="mask-icon" href="/icon_maskable.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="mask-icon" href="/maskable.svg">
     <title>Dragon Rampant Army Builder</title>
   </head>
   <body>
