--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,9 +9,12 @@
       name="Dragon Rampant Army Builder"
       content="Web app to build armies for Dragon Rampant"
     />
-    <meta name="Description" content="Web app to build armies for Dragon Rampant. An Armybuilder for the tabletop strategy game Dragon Rampant.">
+    <meta
+      name="Description"
+      content="Web app to build armies for Dragon Rampant. An Armybuilder for the tabletop strategy game Dragon Rampant."
+    />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="mask-icon" href="/maskable.svg">
+    <link rel="mask-icon" href="/maskable.svg" />
     <title>Dragon Rampant Army Builder</title>
   </head>
   <body>
